@@ -14,6 +14,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Fixed a bug in ListAdmin._handlepost that would crash when trying to
+      preserve a held message for the site admin if HOLD_MESSAGES_AS_PICKLES
+      is False.  (LP: #1282365)
+
     - The from_is_list header munging feature introduced in Mailman 2.1.16 is
       no longer erroneously applied to Mailman generated notices.
       (LP: #1279667)
